--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ baseurl: "" # the subpath of your site, e.g. /blog/
 url: "" # the base hostname & protocol for your site
 
 twitter_username: 'ConciergePixel'
-github_username:
+github_username: 'ConciergePixel'
 
 # Build settings
 markdown: kramdown
